--- a/customize_confirm.html
+++ b/customize_confirm.html
@@ -58,7 +58,7 @@
 	<div class="flex-container"> 
 
 	<div class = "box">
-		<img border="0" alt="size" src="images/Final_BBT_Logo.png" style="width:70%">
+		<img border="0" alt="size" src="images/Final_BBT_logo.png" style="width:70%">
 	</div>
 
 
