--- a/customize_size.html
+++ b/customize_size.html
@@ -112,7 +112,7 @@ if(image==1) {
     document.getElementById('myImage').src = "images/Regular_Size_logo.png";
 }
 else {
-    document.getElementById('myImage').src = "images/Large_Size_Logo.png";
+    document.getElementById('myImage').src = "images/Large_Size_logo.png";
 }
 
 }
